polished consult operations for franchises and its companies
