# controllers/company.go
@@ -11,24 +11,6 @@ import (
 
 var validate = validations.GetValidator()
 
-/*func CreateCompanyTEST(c echo.Context) error {
-	//TEST with whois
-	//result, err := whois.Whois("marriott.com")
-	//if err == nil {
-	//	fmt.Println(result)
-	//}
-
-	message := ""
-	//id, err := services.CreateCompanyService()
-	if id > 0 && err == nil {
-		message = fmt.Sprint("Created a city with id %d", id)
-	} else {
-		message = fmt.Sprintf("could not create city! err: %s", err.Error())
-	}
-
-	return c.JSON(http.StatusCreated, message)
-}*/
-
 // CreateCompany godoc
 // @Tags Company
 // @Summary Company Creation
@@ -116,7 +98,8 @@ func GetCompanyById(c echo.Context) error {
 // @Description Find a company by its id and update it
 // @Produce json
 // @Param company_id path string true "Id of the company"
-// @Success 200 {object} string
+// @Param companyInfo body dto.UpdateCompanyDTO true "body"
+// @Success 200 {object} models.Company
 // @Router /clubhub/api/v1/company/{company_id} [put]
 func UpdateCompany(c echo.Context) error {
 	companyId := c.Param("company_id")
@@ -125,6 +108,20 @@ func UpdateCompany(c echo.Context) error {
 		message := "Not found"
 		return c.JSON(http.StatusNotFound, message)
 	}
-	message := "Updating by id:" + companyId
-	return c.JSON(http.StatusOK, message)
+
+	companyInfo := dto.UpdateCompanyDTO{}
+	if err := c.Bind(&companyInfo); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	if err := validate.Struct(companyInfo); err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
+	}
+
+	company, err := services.UpdateCompany(companyId, companyInfo)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, err)
+	}
+
+	return c.JSON(http.StatusOK, company)
 }
